refactor: 加入文章: 在 csrf token 的保护之下
加入文章: 在 csrf token 的保护之下

--- a/src/_drafts/2020-02-09-关于主角的生活态度.md
+++ b/src/_drafts/2020-02-09-关于主角的生活态度.md
@@ -1,9 +1,14 @@
 ---
 layout: post
 title: "关于主角的生活态度"
-subtitle: "about logout from delighted land"
+subtitle: "Life attitude"
 date:         2020-02-08 00:00:00
 author: "tzuw"
 header-img:  "public/assets/img/cement.png"
 tags: 主角
 ---
+
+苏轼对苏辙说：
+九三郎，尔尙欲咀嚼耶，生活有时如一碗难以咽下的面汤，越品越觉得自己境遇太苦，不如就放下吧。一遍遍回忆，把痛苦延长，未来也会变得可惜。
+
+所以苏澈都经历了什么？
